// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupervisorList renders with multiple supervisors 1`] = `
<div
  className="__InlineList__"
>
  <span
    className=""
  >
    Supervisors
    : 
  </span>
  <ul>
    <li
      key="123"
    >
      <Author
        author={
          Immutable.Map {
            "uuid": "123",
            "full_name": "John Doe",
          }
        }
      />
      , 
    </li>
    <li
      key="456"
    >
      <Author
        author={
          Immutable.Map {
            "uuid": "456",
            "full_name": "Jane Doe",
          }
        }
      />
    </li>
  </ul>
</div>
`;

exports[`SupervisorList renders with one supervisor 1`] = `
<div
  className="__InlineList__"
>
  <span
    className=""
  >
    Supervisor
    : 
  </span>
  <ul>
    <li
      key="123"
    >
      <Author
        author={
          Immutable.Map {
            "uuid": "123",
            "full_name": "John Doe",
          }
        }
      />
    </li>
  </ul>
</div>
`;
